<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#476287"
    tools:context=".ForgotPassword">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:fontFamily="casual"

        android:text="@string/retMotDePasse"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="369dp"
        android:layout_height="69dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"

        android:text="@string/entrez_votre_mail_associ_e_votre_compte_et_nous_vous_enverrons_un_mail_avec_les_instructions_pour_r_initialiser_votre_mot_de_passe"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:fontFamily="casual"
        android:text="@string/adresseEmail"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView49" />

    <EditText
        android:id="@+id/enteryouremailforpassword"
        android:layout_width="317dp"
        android:layout_height="38dp"
        android:hint="@string/entrezVotreMail"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <Button
        android:id="@+id/buttonForgotPassword"
        android:layout_width="307dp"
        android:layout_height="43dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/corner_button"
        android:text="@string/sendInstructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enteryouremailforpassword" />

    <TextView
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/retour"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/imageRetourForgotPassword"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageRetourForgotPassword"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrowback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>