<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentProfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#476287"
    tools:context=".MyProfil">

    <TextView
        android:id="@+id/textYourPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:layout_marginTop="12dp"
        android:fontFamily="casual"
        android:text="************"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textYourMail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textYourMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/votre_e_mail"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView60"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        tools:ignore="MissingConstraints" />


    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="307dp"
        android:layout_height="42dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/corner_button"
        android:text="@string/changer_le_mot_de_passe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeMail"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonChangeMail"
        android:layout_width="307dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/corner_button"
        android:text="@string/changer_d_adresse_mail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextNewEmail"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditTextNewEmail"
        android:layout_width="303dp"
        android:layout_height="46dp"
        android:layout_marginTop="192dp"
        android:fontFamily="casual"
        android:hint="@string/entrez_votre_nouveau_email"
        android:textColor="@color/white"

        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textYourPassword" />

    <EditText
        android:id="@+id/EditTextNewPassword"
        android:layout_width="311dp"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:hint="@string/entrez_votre_nouveau_mot_de_passe"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonChangeMail" />

    <TextView
        android:id="@+id/buttonBack"
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/retour"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="46dp"
        android:layout_height="22dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/arrowback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="68dp"
        android:fontFamily="casual"
        android:text="@string/votre_profil"
        android:textColor="@color/white"
        android:textSize="28dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView52"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="44dp"
        android:fontFamily="casual"
        android:text="@string/r_initialsier_vos_informations"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textYourPassword" />

    <TextView
        android:layout_width="371dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/lorsque_vous_aurez_r_initialis_votre_adresse_mail_ou_votre_mot_de_passe_vous_serez_automatiquement_redirig_vers_la_page_de_connexion"
        android:textColor="@color/white"
        android:textSize="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView52" />

    <Button
        android:id="@+id/pageFichier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="fichier"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pageCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Compte"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>