<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#476287"
    tools:context=".ComparateFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="casual"
        android:text="Comparaison des dépenses entre le mois actuel et précédent"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLastMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="120dp"
        android:fontFamily="casual"
        android:text="@string/mois_dernier"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textCurrentMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="4dp"
        android:fontFamily="casual"
        android:text="@string/mois_actuel"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDepenseMoisDernier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="252dp"
        android:fontFamily="casual"
        android:text="@string/d_pense_mois_dernier"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="108dp"
        android:text="€"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textDepenseMoisDernier"
        app:layout_constraintTop_toBottomOf="@+id/textLastMonth" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="€"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/textDepenseMoisActuel"
        app:layout_constraintTop_toBottomOf="@+id/textCurrentMonth" />

    <TextView
        android:id="@+id/textDepenseMoisActuel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="@string/d_pense_mois_actuel"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pourcentageEntreDeuxMois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="372dp"
        android:fontFamily="casual"
        android:text="@string/poucentage_entre_les_deux"
        android:textColor="@color/white"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGnerateFichierExcel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:backgroundTint="@color/white"
        android:fontFamily="casual"
        android:text="@string/g_n_rer_mon_fichier_excel"

        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pourcentageEntreDeuxMois"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="211dp"
        tools:layout_editor_absoluteY="129dp" />

</androidx.constraintlayout.widget.ConstraintLayout>